3rd July target 'accomplished'. Missing fix bug when getting uid.

--- a/src/app/components/admin-user/admin-user.component.css
+++ b/src/app/components/admin-user/admin-user.component.css
@@ -41,3 +41,10 @@ form {
 ::ng-deep.p-float-label > label {
   color: #44476a;
 }
+
+.admin-user-container {
+  min-width: 804px !important;
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+  margin-bottom: 1rem !important;
+}
