--- a/src/app/components/admin-navbar/admin-navbar.component.css
+++ b/src/app/components/admin-navbar/admin-navbar.component.css
@@ -1,39 +1,50 @@
 ::ng-deep .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link {
-    color: #44476a;
-    border: 0.0625rem solid #d1d9e6;
-    border-top-left-radius: 0.55rem;
-    border-top-right-radius: 0.55rem;
-    background-color: #e6e7ee;
-    font-weight: normal;
+  color: #44476a;
+  border: 0.0625rem solid #d1d9e6;
+  border-top-left-radius: 0.55rem;
+  border-top-right-radius: 0.55rem;
+  background-color: #e6e7ee;
+  font-weight: normal;
 }
 
 ::ng-deep.p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .p-menuitem-link {
-    background-color: #e6e7ee;
-    border: 0.0625rem solid #d1d9e6;
-    color: #44476a;
-    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
-    font-weight: bold;
+  background-color: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+  color: #44476a;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  font-weight: bold;
 }
 
-::ng-deep.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link:not(.p-disabled):focus {
-    box-shadow: none;
-    animation: pulse 3s infinite;
+::ng-deep.p-tabmenu
+  .p-tabmenu-nav
+  .p-tabmenuitem
+  .p-menuitem-link:not(.p-disabled):focus {
+  box-shadow: none;
+  animation: pulse 3s infinite;
 }
 
-::ng-deep.p-tabmenu .p-tabmenu-nav .p-tabmenuitem:not(.p-highlight):not(.p-disabled):hover .p-menuitem-link {
-    border: 0.0625rem solid #d1d9e6;
-    color: #44476a;
-    background-color: #e6e7ee;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 2px 2px 5px #b8b9be;
-    text-decoration: none;
-    font-size: bold;
-    animation: pulse 3s infinite;
-
+::ng-deep.p-tabmenu
+  .p-tabmenu-nav
+  .p-tabmenuitem:not(.p-highlight):not(.p-disabled):hover
+  .p-menuitem-link {
+  border: 0.0625rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 2px 2px 5px #b8b9be;
+  text-decoration: none;
+  font-size: bold;
+  animation: pulse 3s infinite;
 }
 
 ::ng-deep.p-tabmenu .p-tabmenu-nav {
-    padding-top: .55rem;
-    padding-left: .55rem;
+  padding-top: 0.55rem;
+  padding-left: 0.55rem;
+}
 
+.admin-navbar-container {
+  min-width: 804px !important;
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+  margin-bottom: 1rem !important;
 }
