--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -25,7 +25,7 @@
   width: 96%;
 }
 
-.i-bigger{
+.i-bigger {
   font-size: 1.3rem;
   vertical-align: middle;
 }
@@ -44,39 +44,8 @@
   margin-top: 2.2rem;
 }
 
-.remove-btn-container{
-  margin-top: .8rem;
-
-}
-
-::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
-  background-color: #44476a;
-}
-
-::ng-deep .mat-slide-toggle .mat-slide-toggle-thumb {
-  background-color: #b1bcce;
-}
-
-::ng-deep .mat-slide-toggle:hover .mat-slide-toggle-bar {
-  background-color: #b1bcce;
-}
-
-::ng-deep .mat-slide-toggle .mat-slide-toggle-bar {
-  border: 0.0625rem solid #d1d9e6;
-  background-color: #e6e7ee;
-}
-
-::ng-deep .mat-slide-toggle.mat-checked:hover .mat-slide-toggle-bar {
-  background-color: #44476a;
-}
-
-::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
-  border: 0.0625rem solid #d1d9e6;
-  background-color: #e6e7ee;
-}
-
-::ng-deep .mat-slide-toggle-ripple.mat-ripple {
-  display: none;
+.remove-btn-container {
+  margin-top: 0.8rem;
 }
 
 ::ng-deep p-celleditor > p-dropdown > .p-dropdown,
@@ -84,10 +53,52 @@
   border-bottom: none !important;
 }
 
-.form-row > div > ::ng-deep p-dropdown > .p-dropdown{
+.form-row > div > ::ng-deep p-dropdown > .p-dropdown {
   width: 100%;
 }
 
-::ng-deep.p-accordion .p-accordion-header:not(.p-disabled).p-highlight .p-accordion-header-link, .p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus {
-  animation: none
+::ng-deep.p-accordion
+  .p-accordion-header:not(.p-disabled).p-highlight
+  .p-accordion-header-link,
+.p-accordion
+  .p-accordion-header:not(.p-disabled)
+  .p-accordion-header-link:focus {
+  animation: none;
+}
+
+.admin-template-table-container
+  ::ng-deep
+  .p-datatable
+  .p-datatable-tbody
+  > tr:last-child
+  > td:nth-child(2) {
+  box-shadow: none !important;
+}
+
+.admin-template-table-container
+  ::ng-deep
+  .p-datatable
+  .p-datatable-tbody
+  > tr:last-child
+  > td:first-child {
+  box-shadow: inset 0px -26px 16px -24px #fff, inset -4px 0px 0px -2px #d1d9e6,
+    inset 24px -17px 8px -24px #b8b9be, inset 0px -13px 9px -11px #fff !important;
+}
+
+.admin-template-table-container .sticky-column-checkboxes {
+  box-shadow: inset 5px 0 5px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6 !important;
+}
+
+.admin-template-table-container .sticky-checkboxes-main {
+  box-shadow: inset 9px 9px 9px -9px #b8b9be, inset 0px -3px 0px -2px #d1d9e6,
+    inset -4px 0px 0px -2px #d1d9e6 !important;
+}
+
+.admin-template-container {
+  min-width: 804px !important;
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+  margin-bottom: 1rem !important;
+  padding: 1rem;
+  padding-right: 2rem;
 }
