--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -103,7 +103,6 @@ textarea {
   color: #5c5c5f;
 }
 
-
 ::ng-deep .modifyingAddress .p-dropdown .p-dropdown-panel {
   width: 14rem;
   left: -11px !important;
@@ -113,11 +112,114 @@ textarea {
   width: 100% !important;
 }
 
-.modifyingAddress ::ng-deep.p-dropdown, .modifyingAddress ::ng-deep.p-dropdown.p-focus {
+.modifyingAddress ::ng-deep.p-dropdown,
+.modifyingAddress ::ng-deep.p-dropdown.p-focus {
   margin-top: 1.4rem;
   margin-bottom: 3rem;
 }
 
 .modifyingAddress ::ng-deep.p-dropdown-items-wrapper {
   max-height: 6rem !important;
+}
+
+.modifyingAddress ::ng-deep .mat-form-field-infix {
+  border-top: none;
+}
+
+.list-container ::ng-deep .p-dropdown .p-dropdown-panel {
+  left: -2.6rem !important;
+  width: 6.5rem;
+}
+
+.list-container ::ng-deep .p-dropdown-item {
+  white-space: normal;
+  overflow-wrap: break-word;
+}
+
+.list-container ::ng-deep .p-dropdown .p-dropdown-label.p-inputtext {
+  content-visibility: hidden !important;
+}
+
+.list-container ::ng-deep .p-dropdown {
+  border: none !important;
+  left: 50%;
+  margin: -25px 0 0 -28px;
+  top: 25%;
+}
+
+.list-container .button-neumorphism.default:hover {
+  color: #44476ade !important;
+}
+
+.list-container .btn-group-col {
+  overflow-y: auto;
+  display: inline-flex;
+  width: auto;
+  max-width: 91.7%;
+  border-top-left-radius: 1rem;
+  white-space: nowrap !important;
+}
+
+.list-container .select-group-col {
+  /* box-shadow: -3px 0px 10px 0px #d1d9e6; */
+  border-top-right-radius: 1rem;
+}
+
+.list-container .group-row {
+  padding: 0 !important;
+  border: 0.1rem solid #d1d9e6;
+  border-bottom: none !important;
+}
+
+.list-container .button-neumorphism {
+  box-shadow: none !important;
+  border-radius: 0 !important;
+  width: max-content !important;
+  word-break: normal !important;
+  display: inline-flex;
+  border-top: none !important;
+  border-bottom: none !important;
+  border-right: none !important;
+  transition: background-color 200ms, color 200ms !important;
+  align-items: center;
+  justify-content: center;
+}
+
+.list-container .button-neumorphism:hover {
+  background-color: #e0e1e9;
+  color: #d2d3db96 !important;
+}
+
+.list-container .iconBtn {
+  position: absolute;
+  visibility: hidden;
+  color: transparent;
+  transition: font-size 200ms, color 100ms;
+  font-size: 0;
+  transition-timing-function: ease-in-out;
+}
+
+.list-container .button-neumorphism:hover .iconBtn {
+  visibility: visible;
+  color: #44476a;
+  font-size: 1.3rem;
+}
+
+.list-container {
+  margin: 0 !important;
+  padding: 0 !important;
+  flex-wrap: nowrap !important;
+  width: 100%;
+  max-width: 100%;
+  height: 3rem;
+}
+
+.call-info-form {
+  background: #e6e7ee;
+  border: 0.1rem solid #d1d9e6;
+  border-radius: 2rem;
+  padding: 1.5rem;
+  padding-top: 0;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
 }
