--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,63 +1,87 @@
 <!-- Bootstrap CSS CDN -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    crossorigin="anonymous" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2">
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  crossorigin="anonymous"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+/>
 
-    <!-- Bootstrap Icons -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+<!-- Bootstrap Icons -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+/>
 
 <!-- my-navbar -->
 <div class="my-navbar" *ngIf="isLoggedIn$ | async as isLoggedIn">
+  <div class="my-navbar-header">
+    <img
+      class="my-navbar-logo"
+      src="{{ navbarlogo }}"
+      matTooltip="{{ navbarname }}"
+      matTooltipPosition="right"
+    />
+  </div>
 
-    <div class="my-navbar-header">
-        <img class="my-navbar-logo" src="{{ navbarlogo }}" matTooltip="{{ navbarname }}" matTooltipPosition="right">
-    </div>
-       
-    <div class="partialsContainer">
-
+  <div class="partialsContainer">
     <ul class="ul-my-navbar">
-        <li class="my-navbar-tab-container" *ngIf="isLoggedIn">
-            <ng-container *ngIf="userInfo.name">            
-            <div class="dropdown" (click)="onActivate($event)">
-                <div class="my-navbar-tab " routerLinkActive="active-tab"  matTooltip="{{userInfo.tenant  +  userInfo.name}}" matTooltipPosition="right" >
-                    <a class="a-my-navbar">
-                        <i class="bi bi-person-circle i-my-navbar"></i>
-                    </a>
-                    <div class="txt-my-navbar">
-                        {{userInfo.name}}
-                    </div>
-                </div>
-                <div class="dropdown-content">
-                
-                    <div class="my-navbar-tab" matTooltip="Admin settings" matTooltipPosition="right"  *ngIf="userInfo.admin" >
-                        <a class="a-my-navbar" routerLink="admin-settings">
-                            <i class="bi bi-safe2-fill i-my-navbar"></i>
-                        </a>
-                    </div>
-                    <div class="my-navbar-tab" matTooltip="Log out" matTooltipPosition="right">
-                        <a class="a-my-navbar" (click)="onLogout()">
-                            <i class="bi bi-box-arrow-left i-my-navbar"></i>
-                        </a>
-                    </div>
+      <li class="my-navbar-tab-container" *ngIf="isLoggedIn">
+        <ng-container *ngIf="userInfo.name">
+          <div class="dropdown" (click)="onActivate($event)">
+            <div
+              class="my-navbar-tab"
+              routerLinkActive="active-tab"
+              matTooltip="{{ userInfo.tenant + '\n' + userInfo.name }}"
+              matTooltipPosition="right"
+            >
+              <a class="a-my-navbar">
+                <i class="bi bi-person-circle i-my-navbar"></i>
+              </a>
+              <div class="txt-my-navbar">
+                {{ userInfo.name }}
+              </div>
             </div>
-        </div>
-    </ng-container>
-
-        </li>
-        <li class="my-navbar-tab-container" *ngFor="let tab of navbartabs">
-            <div class="my-navbar-tab" matTooltip="{{ tab.tab_name }}" matTooltipPosition="right" routerLinkActive="active-tab">
-                <a class="a-my-navbar" [routerLink]="[tab.tab_route]" >
-                    <i class="{{ tab.tab_icon }} i-my-navbar"></i>
+            <div class="dropdown-content">
+              <div
+                class="my-navbar-tab"
+                matTooltip="Admin settings"
+                matTooltipPosition="right"
+                *ngIf="userInfo.admin"
+              >
+                <a class="a-my-navbar" routerLink="admin-settings">
+                  <i class="bi bi-safe2-fill i-my-navbar"></i>
                 </a>
+              </div>
+              <div
+                class="my-navbar-tab"
+                matTooltip="Log out"
+                matTooltipPosition="right"
+              >
+                <a class="a-my-navbar" (click)="onLogout()">
+                  <i class="bi bi-box-arrow-left i-my-navbar"></i>
+                </a>
+              </div>
             </div>
-        </li>      
+          </div>
+        </ng-container>
+      </li>
+      <li class="my-navbar-tab-container" *ngFor="let tab of navbartabs">
+        <div
+          class="my-navbar-tab"
+          matTooltip="{{ tab.tab_name }}"
+          matTooltipPosition="right"
+          routerLinkActive="active-tab"
+        >
+          <a class="a-my-navbar" [routerLink]="[tab.tab_route]">
+            <i class="{{ tab.tab_icon }} i-my-navbar"></i>
+          </a>
+        </div>
+      </li>
     </ul>
-</div>
-
+  </div>
 </div>
 
 <!-- Angular components -->
 <div class="container-fluid">
-
-    <router-outlet></router-outlet>
-
+  <router-outlet></router-outlet>
 </div>
