--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -2,26 +2,43 @@
   <div *ngFor="let element of componentPhone; let i = index">
     <div *ngIf="element.element == 'toggle'">
       <div class="form-check form-check-inline button-inline width-100">
-        <h6 class="toggle-neumorphism-label">{{ element.element_placeholder }}</h6>
-        <label class="toggle-neumorphism">
-          <input type="checkbox" (click)="btnAutoDialer()" />
-          <span class="toggle-slider-neumorphism toggle-round-neumorphism">
-            <label class="toggle-label" [ngClass]="toggleStatus ? 'show' : 'hide'">On</label>
-          </span>
-        </label>
-        <button class="iconbutton-neumorphism btnEditLayout" matTooltip="Remove {{ element.element_placeholder }}"
-        matTooltipPosition="above" (click)="editLayout(i)" *ngIf="tglEditLayout">
-        <i class="bi bi-trash-fill"></i>
-      </button>
+        <h6 class="toggle-neumorphism-label">
+          {{ element.element_placeholder }}
+        </h6>
+        <mat-slide-toggle
+          class="example-margin"
+          [checked]="tglAutoDialer"
+          #templateStatus
+          (change)="toggleAutoDialer()"
+        >
+        </mat-slide-toggle>
+        <button
+          class="iconbutton-neumorphism btnEditLayout"
+          matTooltip="Remove {{ element.element_placeholder }}"
+          matTooltipPosition="above"
+          (click)="editLayout(i)"
+          *ngIf="tglEditLayout"
+        >
+          <i class="bi bi-trash-fill"></i>
+        </button>
       </div>
     </div>
     <div *ngIf="element.element == 'inputIcon'">
       <div class="form-check form-check-inline button-inline">
-        <input type="{{ element.element_type }}" class="input-neumorphism"
-          placeholder="{{ element.element_placeholder }}">
+        <input
+          type="{{ element.element_type }}"
+          class="input-neumorphism"
+          placeholder="{{ element.element_placeholder }}"
+        />
         <div class="iconbutton-neumorphism btnCall" (click)="btnAnswerCall()">
-          <i class="bi bi-telephone-fill " [ngClass]="containerCallStatus ? 'hide' : 'show'"></i>
-          <i class="bi bi-x-circle-fill " [ngClass]="containerCallStatus ? 'show' : 'hide'"></i>
+          <i
+            class="bi bi-telephone-fill"
+            [ngClass]="containerCallStatus ? 'hide' : 'show'"
+          ></i>
+          <i
+            class="bi bi-x-circle-fill"
+            [ngClass]="containerCallStatus ? 'show' : 'hide'"
+          ></i>
         </div>
       </div>
     </div>
@@ -33,9 +50,13 @@
             </div>
         </div> -->
   </div>
-  <div *ngIf="containerCallStatus" class="container-neumorphism" [ngClass]="holdStatus ? 'change-on-hold' : ''">
+  <div
+    *ngIf="containerCallStatus"
+    class="container-neumorphism"
+    [ngClass]="holdStatus ? 'change-on-hold' : ''"
+  >
     <div class="form-check form-check-inline width-100 border-bottom">
-      <small class="margin-rt width-100 ">Call established</small>
+      <small class="margin-rt width-100">Call established</small>
       <small class="margin-rt">00:01:30</small>
     </div>
     <div class="form-check form-check-inline width-100">
@@ -43,26 +64,66 @@
     </div>
     <div class="form-check form-check-inline width-100">
       <small class="margin-rt width-100">6126163731</small>
-      <button class="mini-iconbutton-neumorphism mute-toggle" pTooltip="Mute" tooltipPosition="above"
-        (click)="btnMuteCall()" [ngClass]="xferStatus ? 'hide' : 'show'">
-        <i class="bi bi-mic-fill mute-toggle-unmuted " [ngClass]="muteStatus ? 'hide' : 'show'"></i>
-        <i class="bi bi-mic-mute-fill mute-toggle-muted " [ngClass]="muteStatus ? 'show' : 'hide'"></i>
+      <button
+        class="mini-iconbutton-neumorphism mute-toggle"
+        pTooltip="Mute"
+        tooltipPosition="above"
+        (click)="btnMuteCall()"
+        [ngClass]="xferStatus ? 'hide' : 'show'"
+      >
+        <i
+          class="bi bi-mic-fill mute-toggle-unmuted"
+          [ngClass]="muteStatus ? 'hide' : 'show'"
+        ></i>
+        <i
+          class="bi bi-mic-mute-fill mute-toggle-muted"
+          [ngClass]="muteStatus ? 'show' : 'hide'"
+        ></i>
       </button>
-      <button class="mini-iconbutton-neumorphism hold-toggle" pTooltip="Hold" tooltipPosition="above"
-        (click)="btnHoldCall()" [ngClass]="xferStatus ? 'hide' : 'show'">
-        <i class="bi bi-pause-fill hold-toggle-onhold " [ngClass]="holdStatus ? 'hide' : 'show'"></i>
-        <i class="bi bi-play-fill hold-toggle-oncall  " [ngClass]="holdStatus ? 'show' : 'hide'"></i>
+      <button
+        class="mini-iconbutton-neumorphism hold-toggle"
+        pTooltip="Hold"
+        tooltipPosition="above"
+        (click)="btnHoldCall()"
+        [ngClass]="xferStatus ? 'hide' : 'show'"
+      >
+        <i
+          class="bi bi-pause-fill hold-toggle-onhold"
+          [ngClass]="holdStatus ? 'hide' : 'show'"
+        ></i>
+        <i
+          class="bi bi-play-fill hold-toggle-oncall"
+          [ngClass]="holdStatus ? 'show' : 'hide'"
+        ></i>
       </button>
-      <input type="number" class="mini-input-neumorphism" placeholder="Transfer to..."
-        [ngClass]="xferStatus ? 'show' : 'hide'">
-      <button class="mini-iconbutton-neumorphism" pTooltip="Transfer to" tooltipPosition="above"
-        (click)="btnXferCall()">
-        <i class="bi bi-telephone-forward-fill " [ngClass]="xferStatus ? 'hide' : 'show'"></i>
-        <i class="bi bi-x-circle-fill " [ngClass]="xferStatus ? 'show' : 'hide'"></i>
+      <input
+        type="number"
+        class="mini-input-neumorphism"
+        placeholder="Transfer to..."
+        [ngClass]="xferStatus ? 'show' : 'hide'"
+      />
+      <button
+        class="mini-iconbutton-neumorphism"
+        pTooltip="Transfer to"
+        tooltipPosition="above"
+        (click)="btnXferCall()"
+      >
+        <i
+          class="bi bi-telephone-forward-fill"
+          [ngClass]="xferStatus ? 'hide' : 'show'"
+        ></i>
+        <i
+          class="bi bi-x-circle-fill"
+          [ngClass]="xferStatus ? 'show' : 'hide'"
+        ></i>
       </button>
-      <button class="mini-iconbutton-neumorphism" pTooltip="Hang up" tooltipPosition="above"
-        (click)="btnHangUpCall()">
-        <i class="bi bi-telephone-x-fill "></i>
+      <button
+        class="mini-iconbutton-neumorphism"
+        pTooltip="Hang up"
+        tooltipPosition="above"
+        (click)="btnHangUpCall()"
+      >
+        <i class="bi bi-telephone-x-fill"></i>
       </button>
     </div>
   </div>
@@ -77,29 +138,32 @@
       <button class="button-neumorphism width-100">Email</button>
     </div>
   </div>
-  <div class="row ">
-    <div class="col-6 button-inline ">
+  <div class="row">
+    <div class="col-6 button-inline">
       <button class="button-neumorphism width-100">Pending</button>
     </div>
-    <div class="col-6 button-inline ">
+    <div class="col-6 button-inline">
       <button class="button-neumorphism width-100">Payments</button>
     </div>
   </div>
   <div class="row">
-    <div class="col-12 button-inline " [ngClass]="toggleStatus ? 'hide' : 'show'">
-      <button class="button-neumorphism float-right"> Next call <i
-          class="bi bi-arrow-right-circle-fill "></i>
+    <div
+      class="col-12 button-inline"
+      [ngClass]="tglAutoDialer ? 'hide' : 'show'"
+    >
+      <button class="button-neumorphism float-right">
+        Next call <i class="bi bi-arrow-right-circle-fill"></i>
       </button>
     </div>
   </div>
-  <hr>
+  <hr />
 </div>
 
 <div class="phone-history">
   <div *ngFor="let log of phoneHistory; let i = index" id="list">
     <div class="phone-log">
       <div class="width-100" (click)="showTimeHandle($event)" id="{{ i }}">
-        <div class="form-check form-check-inline width-100 " id="{{ i }}">
+        <div class="form-check form-check-inline width-100" id="{{ i }}">
           <h6 class="width-100" id="{{ i }}">{{ log.caller_name }}</h6>
           <small id="{{ i }}">{{ log.caller_in_date }}</small>
         </div>
@@ -110,7 +174,7 @@
         <div class="hide" pTooltip="Call duration" tooltipPosition="left">
           <p>{{ log.call_time }}</p>
         </div>
-        <hr>
+        <hr />
       </div>
     </div>
   </div>
