--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -138,9 +138,9 @@
 }
 
 .button-neumorphism-active {
-  color: #44476a  !important;
-  background-color: #e6e7ee  !important;
-  border: 0.0625rem solid #d1d9e6  !important;
+  color: #44476a !important;
+  background-color: #e6e7ee !important;
+  border: 0.0625rem solid #d1d9e6 !important;
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
 }
 
@@ -553,7 +553,7 @@ input:checked + .toggle-slider-neumorphism::before {
   background-color: #e6e7ee;
   box-shadow: 2px 2px 5px #b8b9be;
   border-radius: 1rem;
-  width: 16rem !important;
+  width: 17rem !important;
   padding: 0.55rem;
 }
 
@@ -890,7 +890,6 @@ input:checked + .toggle-slider-neumorphism::before {
 }
 
 ::ng-deep.p-multiselect .p-multiselect-panel {
-  top: -177.922px !important;
   border-radius: 0.55em;
 }
 
@@ -1027,4 +1026,54 @@ input:checked + .toggle-slider-neumorphism::before {
 
 textarea:focus-visible {
   outline: none !important;
+}
+
+::ng-deep .p-toast .p-toast-message .p-toast-icon-close:focus {
+  box-shadow: none;
+  background-color: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+}
+
+::ng-deep .p-toast .p-toast-message .p-toast-icon-close:hover {
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  background-color: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+}
+
+::ng-deep
+  .p-toast
+  .p-toast-message
+  .p-toast-icon-close
+  .p-toast-icon-close-icon {
+  padding-left: 0.6rem;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+  background-color: #44476a;
+}
+
+::ng-deep .mat-slide-toggle .mat-slide-toggle-thumb {
+  background-color: #b1bcce;
+}
+
+::ng-deep .mat-slide-toggle:hover .mat-slide-toggle-bar {
+  background-color: #b1bccec9;
+}
+
+::ng-deep .mat-slide-toggle .mat-slide-toggle-bar {
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #b1bcce;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked:hover .mat-slide-toggle-bar {
+  background-color: #44476ad8;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #44476a;
+}
+
+::ng-deep .mat-slide-toggle-ripple.mat-ripple {
+  display: none;
 }
