4th target accomplished on form component.

--- a/src/app/components/admin-template/admin-template.component.html
+++ b/src/app/components/admin-template/admin-template.component.html
@@ -203,7 +203,7 @@
                     type="button"
                     pInitEditableRow
                     (click)="onRowEditInit(rowData, rowIndex)"
-                    class="iconbutton-neumorphism margin-rt"
+                    class="iconbutton-neumorphism edit-icon margin-rt"
                   >
                     <i class="bi bi-pencil-square"></i>
                   </button>
@@ -212,7 +212,7 @@
                     *ngIf="!editing"
                     type="button"
                     (click)="onRowDeleteRow(rowIndex, indexTemplate)"
-                    class="iconbutton-neumorphism"
+                    class="iconbutton-neumorphism trash-icon"
                   >
                     <i class="bi bi-trash-fill"></i>
                   </button>
