--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -13,7 +13,7 @@
         >
         </mat-slide-toggle>
         <button
-          class="iconbutton-neumorphism btnEditLayout"
+          class="iconbutton-neumorphism trash-icon btnEditLayout"
           matTooltip="Remove {{ element.element_placeholder }}"
           matTooltipPosition="above"
           (click)="editLayout(i)"
