--- a/src/app/components/reusableTable/reusableTable.component.html
+++ b/src/app/components/reusableTable/reusableTable.component.html
@@ -135,11 +135,11 @@
       </td>
       <td>
         <button pRipple *ngIf="!editing" type="button" pInitEditableRow (click)="onRowEditInit(rowData, rowIndex)"
-          class="iconbutton-neumorphism margin-rt">
+          class="iconbutton-neumorphism edit-icon margin-rt">
           <i class="bi bi-pencil-square  "></i>
         </button>
         <button pRipple *ngIf="!editing" type="button" (click)="onRowDeleteRow(rowIndex)"
-          class="iconbutton-neumorphism">
+          class="iconbutton-neumorphism trash-icon">
           <i class="bi bi-trash-fill "></i>
         </button>
         <button pRipple *ngIf="editing" type="button" pSaveEditableRow (click)="onRowEditSave(rowData, rowIndex)"
