--- a/src/app/components/admin-user/admin-user.component.html
+++ b/src/app/components/admin-user/admin-user.component.html
@@ -163,7 +163,7 @@
             type="button"
             pInitEditableRow
             (click)="onRowEditInit(rowData, rowIndex)"
-            class="iconbutton-neumorphism margin-rt"
+            class="iconbutton-neumorphism edit-icon margin-rt"
           >
             <i class="bi bi-pencil-square"></i>
           </button>
@@ -172,7 +172,7 @@
             *ngIf="!editing"
             type="button"
             (click)="onRowDeleteRow(rowIndex)"
-            class="iconbutton-neumorphism"
+            class="iconbutton-neumorphism trash-icon"
           >
             <i class="bi bi-trash-fill"></i>
           </button>
