--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -20,8 +20,16 @@ textarea {
   width: 100% !important;
 }
 
+::ng-deep .call-info-form .txtFormComponent .mat-input-element {
+  box-sizing: content-box;
+  width: 100%;
+
+}
+
 ::ng-deep .txtFormComponent .mat-input-element {
   box-sizing: border-box;
+  width: 100%;
+
 }
 
 ::ng-deep .txtFormComponen t.mat-form-field-wrapper {
@@ -222,4 +230,14 @@ textarea {
   padding-top: 0;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
+}
+
+.call-info-form .col-md-auto{
+  padding-right: 1.5rem;
+    padding-left: 0.5rem;
+}
+
+.address-col{
+  padding-right: 0rem !important;
+
 }
