--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -61,7 +61,7 @@
         </button>
       </div>
       <button
-        class="iconbutton-neumorphism"
+        class="iconbutton-neumorphism edit-icon"
         matTooltip="Edit fields"
         matTooltipPosition="above"
         (click)="toggleEditFields()"
@@ -97,7 +97,7 @@
           "
         >
           <ng-container *ngSwitchCase="'checkbox'">
-            <div class="col-md-12">
+            <div class="col-md-auto">
               <p-checkbox
                 class="checkFormComponent"
                 [binary]="true"
@@ -105,23 +105,23 @@
                 label="{{ callData.element_placeholder }}"
                 inputId="{{ callDataIndex }}"
                 value="{{ callData.element_value }}"
-                formControlName="{{ callData.element_placeholder }}"
+                formControlName="{{ callData.element_table_value }}"
               ></p-checkbox>
             </div>
           </ng-container>
           <ng-container *ngSwitchCase="'address'">
-            <div class="col-md-12">
+            <div class="col-md-auto address-col">
               <label for="{{ callDataIndex }}" class="lblFormComponent"
                 >{{ callData.element_placeholder }} *</label
               >
               <textarea
-                pInputTextarea
+                pInputTextarea cols="100" rows="1"
                 class="input-neumorphism txtFormComponent"
                 (click)="
                   !tgleditField ||
                     toggleModifyAddressForm(
                       callDataIndex,
-                      callData.element_placeholder
+                      callData.element_table_value
                     )
                 "
                 [ngClass]="{ 'input-disabled-neumorphism ': !tgleditField }"
@@ -130,12 +130,12 @@
                 autocomplete="off"
                 value="{{ callData.element_value }}"
                 id="{{ callDataIndex }}"
-                formControlName="{{ callData.element_placeholder }}"
+                formControlName="{{ callData.element_table_value }}"
               ></textarea>
             </div>
           </ng-container>
           <ng-container *ngSwitchCase="'email'">
-            <div class="col-md-12">
+            <div class="col-md-auto">
               <mat-form-field appearance="standard" class="txtFormComponent">
                 <mat-label>{{ callData.element_placeholder }}</mat-label>
                 <input
@@ -151,13 +151,13 @@
                   autocomplete="off"
                   value="{{ callData.element_value }}"
                   id="{{ callDataIndex }}"
-                  formControlName="{{ callData.element_placeholder }}"
+                  formControlName="{{ callData.element_table_value }}"
                 />
               </mat-form-field>
             </div>
           </ng-container>
           <ng-container *ngSwitchDefault>
-            <div class="col-md-12">
+            <div class="col-md-auto">
               <mat-form-field appearance="standard" class="txtFormComponent">
                 <mat-label>{{ callData.element_placeholder }}</mat-label>
                 <input
@@ -172,7 +172,7 @@
                   autocomplete="off"
                   value="{{ callData.element_value }}"
                   id="{{ callDataIndex }}"
-                  formControlName="{{ callData.element_placeholder }}"
+                  formControlName="{{ callData.element_table_value }}"
                 />
               </mat-form-field>
             </div>
@@ -319,119 +319,4 @@
     </form>
   </div>
 </p-dialog>
-
-<form
-  [formGroup]="addressForm"
-  *ngIf="addressForm"
-  novalidate
-  class="address-form"
->
-  <div class="form-row width-100">
-    <div class="col-md-4">
-      <mat-form-field appearance="standard" class="txtFormComponent">
-        <mat-label>Street</mat-label>
-        <input
-          matInput
-          class="input-neumorphism"
-          type="text"
-          placeholder="New Street"
-          autocomplete="off"
-          #street
-          formControlName="txtStreet"
-        />
-      </mat-form-field>
-    </div>
-
-    <div class="col-md-4">
-      <mat-form-field appearance="standard" class="txtFormComponent">
-        <mat-label>Apt/Suite</mat-label>
-        <input
-          matInput
-          class="input-neumorphism"
-          type="text"
-          placeholder="New apt"
-          autocomplete="off"
-          #apt
-          formControlName="txtApt"
-        />
-      </mat-form-field>
-    </div>
-    <div class="col-md-4">
-      <!-- <p-dropdown [options]="cities" class="input-neumorphism" optionLabel="name"
-          optionValue="name" placeholder="City" formControlName="slcCity"></p-dropdown> -->
-      <mat-form-field appearance="standard" class="txtFormComponent">
-        <mat-label>City</mat-label>
-        <input
-          matInput
-          class="input-neumorphism"
-          type="text"
-          placeholder="New City"
-          autocomplete="off"
-          #city
-          formControlName="txtCity"
-        />
-      </mat-form-field>
-    </div>
-  </div>
-  <div class="form-row width-100">
-    <div class="col-md-4">
-      <p-dropdown
-        [options]="states"
-        class="input-neumorphism"
-        optionLabel="name"
-        optionValue="state_code"
-        placeholder="State"
-        formControlName="slcState"
-      ></p-dropdown>
-    </div>
-    <div class="col-md-4">
-      <mat-form-field appearance="standard" class="txtFormComponent">
-        <mat-label>Zip/Postal code</mat-label>
-        <input
-          matInput
-          class="input-neumorphism"
-          type="number"
-          placeholder="New zip code"
-          autocomplete="off"
-          #zip
-          formControlName="txtZip"
-        />
-      </mat-form-field>
-    </div>
-    <div class="col-md-4">
-      <p-dropdown
-        [options]="countries"
-        class="input-neumorphism"
-        (onChange)="getCountryInfo()"
-        optionLabel="name"
-        optionValue="Iso2"
-        placeholder="Country"
-        formControlName="slcCountry"
-      ></p-dropdown>
-    </div>
-  </div>
-  <div class="form-row width-100">
-    <div class="col-md-6">
-      <button class="button-neumorphism" (click)="tglModifyAddressForm = false">
-        Cancel
-      </button>
-    </div>
-    <div class="col-md-6">
-      <button
-        class="button-neumorphism"
-        [disabled]="!addressForm.valid"
-        [ngClass]="
-          !addressForm.valid
-            ? 'button-neumorphism-disabled'
-            : 'button-neumorphism'
-        "
-        (click)="
-          saveAddressModified(city.value, street.value, apt.value, zip.value)
-        "
-      >
-        Save
-      </button>
-    </div>
-  </div>
-</form>
 <p-toast life="5000" position="top-right"></p-toast>
