--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -47,20 +47,31 @@
   flex-direction: row;
   justify-content: flex-end;
   padding-left: 0.75rem;
-  padding-top: 0.5rem !important;
+  padding-top: 1.5rem !important;
 }
 
 .iconbutton-neumorphism {
   color: #44476a !important;
   background-color: #e6e7ee;
-  padding-top: 0.5rem;
+  padding-top: 0.3rem;
   padding-bottom: 0.2rem;
+  padding-left: 0.5em;
   margin: 0;
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 2rem;
   border: 0.0625rem solid #d1d9e6;
   box-shadow: 2px 2px 5px #b8b9be;
+}v
+
+.iconbutton-neumorphism.edit-icon{
+  padding-top: 0.3rem !important;
+  padding-left: 0.5rem !important;
+}
+
+.iconbutton-neumorphism.trash-icon{
+  padding-top: 0.4rem !important;
+    padding-left: 0.5rem !important;
 }
 
 .iconbutton-neumorphism:hover,
