--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -23,12 +23,12 @@
         </button>
       </div>
     </div>
-    <div *ngIf="element.element == 'inputIcon'">
+    <div *ngIf="element.element == 'inputIcon' && currentCall">
       <div class="form-check form-check-inline button-inline">
         <input
           type="{{ element.element_type }}"
           class="input-neumorphism"
-          placeholder="{{ element.element_placeholder }}"
+          placeholder="{{ currentCallPhoneNumber }}"
         />
         <div class="iconbutton-neumorphism btnCall" (click)="btnAnswerCall()">
           <i
@@ -151,7 +151,7 @@
       class="col-12 button-inline"
       [ngClass]="tglAutoDialer ? 'hide' : 'show'"
     >
-      <button class="button-neumorphism float-right">
+      <button class="button-neumorphism float-right" (click)="nextCall()">
         Next call <i class="bi bi-arrow-right-circle-fill"></i>
       </button>
     </div>
@@ -159,23 +159,30 @@
   <hr />
 </div>
 
+<!-- In PhoneHistory below, I commented out the 'click to show call duration feature' 
+For now, I'd like the data shown.  But, clicking a div makes that customer the activeCall (or next call if autoDialer is true). -->
+
 <div class="phone-history">
-  <div *ngFor="let log of phoneHistory; let i = index" id="list">
-    <div class="phone-log">
-      <div class="width-100" (click)="showTimeHandle($event)" id="{{ i }}">
-        <div class="form-check form-check-inline width-100" id="{{ i }}">
-          <h6 class="width-100" id="{{ i }}">{{ log.caller_name }}</h6>
-          <small id="{{ i }}">{{ log.caller_in_date }}</small>
+    <div *ngFor="let log of dialSessionArray; let i = index" id="list">
+        <div class="phone-log"
+            [ngStyle]="{'backgroundColor': currentCall && log.uid === currentCall.uid ? 'lightGreen' : null}">
+            <!-- <div class="width-100" (click)="showTimeHandle($event)" id="{{ i }}"> -->
+            <div class="width-100" (click)="selectCustomer(log.uid )" id="{{ i }}">
+                <div class="form-check form-check-inline width-100" id="{{ i }}">
+                    <h6 class="width-100" id="{{ i }}">{{ log.fullname }}</h6>
+                    <small id="{{ i }}">{{ log.caller_in_date }}</small>
+                </div>
+                <div class="form-check form-check-inline width-100" id="{{ i }}">
+                    <p class="width-100" id="{{ i }}">{{ this.DataService.formatPhoneNumber(log.phonenumber) }}</p>
+                    <small id="{{ i }}" [ngStyle]="{'textAlign': 'right'}">{{ log.lastContact.date.toMillis() |
+                        date:'yyyy/MM/dd h:mm a'}}</small>
+                </div>
+                <div class="!hide" pTooltip="Call duration" tooltipPosition="left" [ngStyle]="{'textAlign': 'right'}">
+                    <small>{{ log.lastContact.result }}</small>
+                </div>
+                <hr />
+            </div>
+            <!-- </div> -->
         </div>
-        <div class="form-check form-check-inline width-100" id="{{ i }}">
-          <p class="width-100" id="{{ i }}">{{ log.caller_phone }}</p>
-          <small id="{{ i }}">{{ log.caller_in_time }}</small>
-        </div>
-        <div class="hide" pTooltip="Call duration" tooltipPosition="left">
-          <p>{{ log.call_time }}</p>
-        </div>
-        <hr />
-      </div>
     </div>
-  </div>
 </div>
