Notes new feature created. Missing approval.

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-auto group-row btn-group-col">
       <button
         class="button-neumorphism default"
-        matTooltip="Active group."
+        matTooltip="Active group"
         matTooltipPosition="above"
         [ngClass]="tbGroupActive.length < 1 ? 'show' : 'hide'"
       >
@@ -14,7 +14,7 @@
         class="button-neumorphism"
         *ngFor="let gp of tbGroupActive"
         (click)="removeGroupSelected(gp.group_id)"
-        matTooltip="Active group."
+        matTooltip="Delete active group"
         matTooltipPosition="above"
       >
         {{ gp.group_name | formatLabel }}
