--- a/src/app/partials/call-information/call-information.component.css
+++ b/src/app/partials/call-information/call-information.component.css
@@ -7,12 +7,13 @@
   margin-left: 9rem;
   margin-right: 5rem;
   margin-top: 2.5rem;
-  height: 57rem;
+  height: max-content;
 }
 
 .form-col {
   overflow: hidden;
-  min-width: 28rem;
+  min-width: 28rem
+
 }
 
 .log-container-col {
@@ -24,11 +25,12 @@
   height: 28rem;
   padding: 0rem 0rem 1.5rem 0rem;
   min-width: 28rem;
+  color: #333333;
 }
 
 .inherit-row {
   margin: 1.5rem 0rem 1.5rem 0rem;
-  min-width: 28rem;
+  color: #333333;
 }
 
 .phone-col {
@@ -37,6 +39,7 @@
   border-radius: 2rem 2rem 2rem 2rem;
   border: 0.1rem solid #d1d9e6;
   padding: 24px 0px 24px 0px;
-  height: 59rem;
+  height: 98%;
   min-width: 28rem;
+  color: #333333;
 }
