Settings page started.

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,4 +1,7 @@
 <div spellcheck="true">
+  <h1>Call information</h1>
+  <h3 *ngIf="currentCall">{{currentCall.fullname}}</h3>
+    <hr><br>
   <div class="form-row list-container">
     <div class="col-md-auto group-row btn-group-col">
       <button
