--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -256,6 +256,7 @@
     scrollDirection="horizontal"
     responsiveLayout="scroll"
     [tableStyle]="{ width: '100%' }"
+    stateStorage="session" stateKey="statedemo-session"
   >
     <ng-template pTemplate="caption">
       <div class="filter-container">
