--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -171,6 +171,7 @@ textarea {
 .list-container .select-group-col {
   /* box-shadow: -3px 0px 10px 0px #d1d9e6; */
   border-top-right-radius: 1rem;
+  max-width: 10%;
 }
 
 .list-container .group-row {
