--- a/src/app/components/phone/phone.component.css
+++ b/src/app/components/phone/phone.component.css
@@ -1,5 +1,5 @@
 .phone-header{
-  padding: 0px 24px 0px 24px;
+  padding: 0 1rem 0 1rem;
 }
 
 .button-inline{
@@ -21,7 +21,7 @@
 }
 
 .phone-log{
-  padding: .55rem 2rem 0 2rem;
+  padding: .55rem 1rem 0 1rem;
   border: .0625rem solid transparent;
   border-radius: .55rem;
   margin-top: .22rem;
@@ -81,4 +81,29 @@ h6, p {
   top: 0;
   background-color: #e6e7ee;
   box-shadow: inset 0px -3px 0px -2px #d1d9e6;
+}
+
+.phone-header ::ng-deep .p-dropdown {
+  width: 85%;
+  border-bottom: none !important;
+}
+
+.phone-header ::ng-deep .p-dropdown .p-dropdown-label.p-inputtext{
+  color: #44476a !important;
+font-weight: 500;
+}
+
+.phone-header ::ng-deep .p-dropdown .p-dropdown-panel{
+  left: -1rem !important;
+    width: 9rem;
+}
+
+.phone-log .iconbutton-neumorphism{
+  width: 1.5rem;
+  height: 1.8rem;
+  padding: 0;
+}
+
+.phone-log i{
+font-size: .7rem;
 }
