--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -62,16 +62,16 @@
   border-radius: 2rem;
   border: 0.0625rem solid #d1d9e6;
   box-shadow: 2px 2px 5px #b8b9be;
-}v
+}
 
-.iconbutton-neumorphism.edit-icon{
+.iconbutton-neumorphism.edit-icon {
   padding-top: 0.3rem !important;
   padding-left: 0.5rem !important;
 }
 
-.iconbutton-neumorphism.trash-icon{
+.iconbutton-neumorphism.trash-icon {
   padding-top: 0.4rem !important;
-    padding-left: 0.5rem !important;
+  padding-left: 0.5rem !important;
 }
 
 .iconbutton-neumorphism:hover,
@@ -146,6 +146,7 @@
   box-shadow: inset 2px 2px 5px #b8b9be;
   animation: pulse 3s infinite;
   outline: none;
+  background-color: #e0e1e9;
 }
 
 .button-neumorphism-active {
@@ -1089,12 +1090,46 @@ textarea:focus-visible {
   display: none;
 }
 
-::ng-deep .p-inputtext:enabled:hover{
+::ng-deep .p-inputtext:enabled:hover {
   border-color: #d1d9e6;
-
 }
 
 ::ng-deep .p-inputtext:enabled:focus {
   border-color: #d1d9e6;
+}
 
+::ng-deep .p-link:focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: none;
+}
+
+::ng-deep.p-scrolltop.p-link {
+  background-color: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+  box-shadow: none;
+}
+
+::ng-deep.p-scrolltop.p-link:hover {
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  background-color: #e6e7ee;
+}
+
+::ng-deep.p-scrolltop .p-scrolltop-icon {
+  color: #44476a;
+}
+
+.status-pending ::ng-deep.p-badge.p-component {
+  background: #a91e2c;
+  color: #fff;
+}
+
+.status-handled ::ng-deep.p-badge.p-component {
+  background: #296e58;
+  color: #fff;
+}
+
+::ng-deep.p-badge.p-component {
+  background: #e6e7ee;
+  color: #333;
 }
