--- a/src/app/partials/settings/settings.component.css
+++ b/src/app/partials/settings/settings.component.css
@@ -1,6 +1,41 @@
 .main-row {
-    margin-left: 9rem;
-    margin-right: 1rem;
-    margin-top: 2.5rem;
-    height: 57rem;
+  margin-left: 9rem;
+  margin-right: 1rem;
+  margin-top: 2.5rem;
+}
+
+.settings-component .col-lg-4,
+.col-lg-12 {
+  min-width: 27rem;
+  color: #333333;
+  padding-bottom: 2rem;
+}
+
+.settings-component .col-container {
+  background: #e6e7ee;
+  border-radius: 2rem;
+  border: 0.1rem solid #d1d9e6;
+}
+
+h4 {
+  padding: 0.55rem 2rem 0rem 2rem;
+}
+
+.option-container {
+  padding: 1rem 2rem 1rem 2rem;
+  box-shadow: inset 0px 3px 0px -2px #d1d9e6;
+}
+
+.option-container:hover {
+  background: #e0e1e9;
+}
+
+.col-container > div:last-child {
+  border-bottom-right-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+}
+
+.mini-iconbutton-neumorphism.add-icon {
+  width: 11% !important;
+  margin-right: 2rem;
 }
